# superlists

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
lists/: tests.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py
lists/templates/lists/: home.html
superlists/: settings.py  urls.py
tests/: functional_test.py
