[tool.poetry]
name = "superlists"
version = "0.1.0"
description = ""
authors = ["Alessandro Lorenzi <me@alorenzi.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
selenium = "^4.3.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
